# AIStatusCanary

./: .gitignore  README.md  package-lock.json  package.json  wrangler.toml
.github/workflows/: release.yml
.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
.wrangler/state/v3/kv/miniflare-KVNamespaceObject/: metadata.sqlite-shm  metadata.sqlite-wal
functions/api/: [[path]].js
mobile-app/: app.js  index.html  manifest.json  package-lock.json  package.json  styles.css  sw.js
server/: package-lock.json  package.json  server.js  worker.js  wrangler.toml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
