[package]
name = "ai-status-canary"
version = "1.0.4"
description = "AI Status Canary Desktop Client"
authors = ["Antigravity"]
edition = "2021"

[lib]
name = "ai_status_canary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
